--- a/client/profile.jade
+++ b/client/profile.jade
@@ -448,7 +448,7 @@ template(name='membership_status')
         +rules_and_regs_check
         .ui.large.basic.button.email_rules_receipt
             i.envelope.teal.icon
-            |Email Rules and Regs Receipt
+            |email rules and regs receipt
         //- +rules_and_regs_
         if user_is_owner
             +image_view key='ownership_paperwork' label='ownership paperwork' direct=true
