--- a/components/delta/delta.jade
+++ b/components/delta/delta.jade
@@ -2,10 +2,10 @@ template(name='delta')
     with current_model
         .ui.stackable.padded.grid
             .row
-                .five.wide.column
+                .six.wide.column
                     .ui.inline.header
-                        i.icon(class=icon)
-                        //- +i name=icon
+                        //- i.icon(class=icon)
+                        +i name=icon
                         | #{title}
                     unless is_loading
                         if currentUser
@@ -29,7 +29,7 @@ template(name='delta')
                             if is_dev
                                 .ui.icon.large.basic.button.print_delta(title='print session doc')
                                     i.code.icon
-                            .ui.reset.icon.basic.button(title='reload session')
+                            .ui.reset.icon.basic.large.button(title='reload session')
                                 i.refresh.icon
                             .ui.delete_delta.icon.basic.button(title='delete session')
                                 i.trash.icon
@@ -47,15 +47,14 @@ template(name='delta')
                     div
                     each sorted_facets
                         +facet
-                .eleven.wide.column
+                .ten.wide.column.scrolling
                     //- .ui.inline.header
                     //-     |sort by
                     //- .ui.button
                     //- .ui.stackable.four.column.grid
-                    .ui.three.cards
-                        each current_delta.result_ids
-                            //- .column
-                            +delta_result
+                    each current_delta.result_ids
+                        //- .column
+                        +delta_result
                 
 
 
@@ -66,8 +65,8 @@ template(name='facet')
         //-     .active.title
         .ui.grey.inline.header 
             if icon
-                i.small.icon(class=icon)
-                //- +i name=icon classes='ui mini inline image'   
+                //- i.small.icon(class=icon)
+                +i name=icon classes='ui mini inline image'   
             if title
                 |#{title}
             else 
@@ -108,7 +107,7 @@ template(name='delta_result')
         if template_exists
             +Template.dynamic template=model_template
         else
-            .ui.result.cloud.card(class=loading_class)
+            .ui.result.cloud.fluid.segment(class=loading_class)
                 .content
                     each fields
                         +Template.dynamic template=view_template 
@@ -117,11 +116,11 @@ template(name='delta_result')
                             +user_list_toggle key='bookmark_ids' icon='bookmark' label='Bookmark' color='red'
                             a.ui.basic.button.route_model(href="/m/#{slug}")
                                 i.sitemap.icon
-                                |View Model
+                                |view model
                             if is_admin
                                 a.ui.basic.button.route_model(href="/model/edit/#{_id}")
                                     i.edit.icon
-                                    |Edit Model
+                                    |edit model
                         else
                             if can_edit
                                 a.ui.large.icon.basic.button(href="/m/#{current_model.slug}/#{_id}/edit" title='edit')
