--- a/components/delta/model_doc.jade
+++ b/components/delta/model_doc.jade
@@ -29,9 +29,7 @@ template(name='model_doc_view')
                 .six.wide.column
                     .ui.large.basic.button.back_to_model
                         i.chevron.left.icon
-                        i.icon(class=current_model.icon)
-                        //- i.icon(class=current_model.icon)
-                        //- +i name=current_model.icon classes='ui mini inline image'
+                        +i name=current_model.icon classes='ui mini inline image'
                         |#{current_model.title}
                     if can_edit
                         div
@@ -41,7 +39,7 @@ template(name='model_doc_view')
                         .ui.header timestamp tags
                         each _timestamp_tags
                             .ui.basic.label #{this}
-                    +user_list_toggle key='bookmark_ids' icon='bookmark-ribbon' label='Bookmark' color='red'
+                    +user_list_toggle key='bookmark_ids' icon='bookmark' label='bookmark' color='red'
                     div
                     .ui.header
                         |by
