--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -168,12 +168,17 @@ template(name='unit_key_checkout')
 
 
 template(name='user_info')
-    a.ui.small.compact.basic.button(href="/user/#{user.username}/")
-        if user.image_id
-            img.ui.avatar.image(src="{{c.url user.image_id width=100 height=100 gravity='face' crop='fill'}}")
-        |#{user.first_name} #{user.last_name}
-        |@#{user.username}
-        +user_status user
+    a.ui.animated.basic.button(href="/user/#{user.username}/")
+        .visible.content
+            if user.image_id
+                img.ui.avatar.image(src="{{c.url user.image_id width=100 height=100 gravity='face' crop='fill'}}")
+            |#{user.first_name} #{user.last_name}
+            |@#{user.username}
+            +user_status user
+        .hidden.content
+            |view
+            i.right.chevron.icon
+
 
 template(name='username_info')
     a.ui.small.compact.basic.button(href="/user/#{user.username}/")
